// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@startupjs/babel-plugin-startupjs-plugins Ignores files without a magic import: Ignores files without a magic import 1`] = `

import config from './startupjs.config.js'
console.log(config)

      ↓ ↓ ↓ ↓ ↓ ↓

import config from "./startupjs.config.js";
console.log(config);


`;

exports[`@startupjs/babel-plugin-startupjs-plugins Leaves file-based models to TeamPlay on Metro: Leaves file-based models to TeamPlay on Metro 1`] = `

import { registry } from 'startupjs/registry'
import config from './startupjs.config.virtual.js'
import models from 'teamplay/file-based-models'
import features from './startupjs.features.virtual.js'
import plugins from './startupjs.plugins.virtual.js'
import dummy from '@dummy/dummy'

config.features = features
registry.init(config, { plugins, models })

const x = 'xxx'
dummy(x)

export default () => {}

      ↓ ↓ ↓ ↓ ↓ ↓

import { registry } from "startupjs/registry";
import config from "../../startupjs.config.js";
import models from "teamplay/file-based-models";
import dummy from "@dummy/dummy";
import _default from "module-1/plugin";
import _default2 from "module-1-plugin/thePlugin.plugin";
import _default3 from "@startupjs/auth/plugins/cookieSession.plugin";
import _default4 from "@startupjs/auth/plugins/jwtSession.plugin";
import _default5 from "@startupjs/auth/plugins/offlineSession.plugin";
import _default6 from "@startupjs/auth/plugins/oauth2.plugin";
import _default7 from "../../dummyPlugin.plugin.js";
const plugins = [
  _default,
  _default2,
  _default3,
  _default4,
  _default5,
  _default6,
  _default7,
];
const features = {
  enableServer: true,
};
config.features = features;
registry.init(config, {
  plugins,
  models,
});
const x = "xxx";
dummy(x);
export default () => {};


`;

exports[`@startupjs/babel-plugin-startupjs-plugins Processes files with a magic import: Processes files with a magic import 1`] = `

import { registry } from 'startupjs/registry'
import config from './startupjs.config.virtual.js'
import models from 'teamplay/file-based-models'
import features from './startupjs.features.virtual.js'
import plugins from './startupjs.plugins.virtual.js'
import dummy from '@dummy/dummy'

config.features = features
registry.init(config, { plugins, models })

const x = 'xxx'
dummy(x)

export default () => {}

      ↓ ↓ ↓ ↓ ↓ ↓

import { registry } from "startupjs/registry";
import config from "../../startupjs.config.js";
import models from "teamplay/file-based-models";
import dummy from "@dummy/dummy";
import _default from "module-1/plugin";
import _default2 from "module-1-plugin/thePlugin.plugin";
import _default3 from "@startupjs/auth/plugins/cookieSession.plugin";
import _default4 from "@startupjs/auth/plugins/jwtSession.plugin";
import _default5 from "@startupjs/auth/plugins/offlineSession.plugin";
import _default6 from "@startupjs/auth/plugins/oauth2.plugin";
import _default7 from "../../dummyPlugin.plugin.js";
const plugins = [
  _default,
  _default2,
  _default3,
  _default4,
  _default5,
  _default6,
  _default7,
];
const features = {
  enableServer: true,
};
config.features = features;
registry.init(config, {
  plugins,
  models,
});
const x = "xxx";
dummy(x);
export default () => {};


`;

exports[`@startupjs/babel-plugin-startupjs-plugins Test sample file from fixtures which loads config: Test sample file from fixtures which loads config 1`] = `

import { registry } from 'startupjs/registry'
import config from './startupjs.config.virtual.js'
import models from 'teamplay/file-based-models'
import features from './startupjs.features.virtual.js'
import plugins from './startupjs.plugins.virtual.js'

config.features = features
registry.init(config, { plugins, models })

      ↓ ↓ ↓ ↓ ↓ ↓

import { registry } from "startupjs/registry";
import config from "../../startupjs.config.js";
import models from "teamplay/file-based-models";
import _default from "module-1/plugin";
import _default2 from "module-1-plugin/thePlugin.plugin";
import _default3 from "@startupjs/auth/plugins/cookieSession.plugin";
import _default4 from "@startupjs/auth/plugins/jwtSession.plugin";
import _default5 from "@startupjs/auth/plugins/offlineSession.plugin";
import _default6 from "@startupjs/auth/plugins/oauth2.plugin";
import _default7 from "../../dummyPlugin.plugin.js";
const plugins = [
  _default,
  _default2,
  _default3,
  _default4,
  _default5,
  _default6,
  _default7,
];
const features = {
  enableServer: true,
};
config.features = features;
registry.init(config, {
  plugins,
  models,
});


`;
